<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/phone_login_form"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ReverseFragment">


    <EditText
        android:id="@+id/latitude_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/latitude"
        android:inputType="textNoSuggestions"
        android:textColor="@color/colorAccent"
        android:importantForAutofill="no"
        android:layout_margin="16dp"/>

    <EditText
        android:id="@+id/longitude_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/longitude"
        android:inputType="textNoSuggestions"
        android:textColor="@color/colorAccent"
        android:importantForAutofill="no"
        android:layout_marginHorizontal="16dp"/>



    <Button
        android:id="@+id/geocode_button"
        style="?android:textAppearanceSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/geocode"
        android:textStyle="bold"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</LinearLayout>